<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FitTimer</string>

    <string name="action_add_group">Add group</string>
    <string name="action_add_programm">Add programm</string>
    <string name="action_copy">Copy</string>
	<string name="action_cut">Cut</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_go">Go</string>
	<string name="action_parameters">Parameters</string>
    <string name="action_pause">Pause</string>
	<string name="action_repeat">Repeat</string>
    <string name="action_save">Save</string>
	<string name="action_set_rests_duration">Set rests duration</string>
    <string name="action_settings">Settings</string>
    <string name="action_start">Start</string>
	<string name="action_set_recs">Set recs</string>
    <string name="action_move">Move to group</string>
    
	
    <string name="action_add_exercise">Add exercise</string>
	<string name="action_rename_group">Rename the group</string>

    
	<string name="cancel">Cancel</string>
	<string name="count">Count before the end</string>
	<string name="copy">Copy</string>
			
    <string name="duration">Duration:</string>
    
	<string name="edit_main">Edit programm parameters</string>
    <string name="edit_timer">Edit timer</string>
    <string name="error_saving_file">Error saving file</string>
    <string name="error_load_xml">Error loading xml</string>
	<string name="expand_text">Expand text</string>
    
    <string name="file_name">File name</string>
    <string name="file_saved">File saved</string>
    
	<string name="lock">Lock</string>
	
    <string name="music">Misic</string>
	<string name="music_rest">Stop music in the rest</string>
	<string name="music_quieter">Make music quieter on speech</string>
		
    <string name="name">Name:</string>
	<string name="next_group_signal">Next group signal:</string>
    
	<string name="ok">Ok</string>
	
	<string name="paste">Paste</string>
	<string name="path_music">Path to music:</string>
	<string name="play_music">Play music</string>
		
	<string name="rename">Rename</string>
	<string name="rest">The rest</string>
	<string name="run">Run</string>

	<string name="select">Select</string>
	<string name="select_path">Select path</string>
	<string name="select_file">Select file</string>
		<string name="speach_descr">Pronounce the exercise description</string>
    <string name="starts_on">Starts on</string>
	
    <string name="text">Description:</string>
    <string name="timers">Timers</string>
	<string name="title_add">Add record</string>
	<string name="title_edit">Edit record</string>
	
	<string name="unlock">Unlock</string>

	<string name="weight">Use weight</string>
	
    <string name="zero">00:00</string>
    <string name="calendar">Calendar</string>

    <string name="select_programm">Select programm</string>
    <string name="archive_all">Archive all</string>
    <string name="extract_from_archive">Extract from archive</string>

    <string name="edit_exercise">Edit exercise</string>

    <string name="warning_select_programm">Select item, not group</string>
    <string name="into">in to</string>
    
    
</resources>
