<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="alex.mochalov.fitplayer.MainActivity" >


    <item
        android:id="@+id/action_edit"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:title="@string/action_edit" 
        android:icon="@drawable/edit44"/>

    <item
        android:id="@+id/action_add_group"
        android:orderInCategory="20"
        android:showAsAction="always"
        android:icon="@drawable/add"
        android:title="@string/action_add_group"/>

    <item
        android:id="@+id/action_add_programm"
        android:orderInCategory="25"
        android:showAsAction="always"
        android:icon="@drawable/add_child"
        android:title="@string/action_add_programm"/>



	<item
        android:id="@+id/action_rename"
        android:orderInCategory="50"
        android:showAsAction="always"
        android:icon="@drawable/rename"
        android:title="@string/rename"/>


    <item
        android:id="@+id/action_delete"
        android:orderInCategory="55"
        android:showAsAction="always"
        android:icon="@drawable/delete"
        android:title="@string/action_delete"/>




</menu>
