<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="alex.mochalov.fitplayer.MainActivity" >

    <item
        android:id="@+id/action_go"
        android:orderInCategory="5"
        android:showAsAction="always"
        android:title="@string/action_go" 
        android:icon="@drawable/go"/>
  
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:title="@string/action_edit" 
        android:icon="@drawable/edit44"/>
    
    <item
        android:id="@+id/action_calendar"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="" 
        android:icon="@drawable/calendar"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_archive"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/archive_all"/>

    <item
        android:id="@+id/action_extract"
        android:orderInCategory="140"
        android:showAsAction="never"
        android:title="@string/extract_from_archive"/>
    
    
    
</menu>
