<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<FrameLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/salad" >

	    <ImageButton
	        android:id="@+id/imgBtnOk"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="end"
	        android:src="@drawable/ok" />

	    <TextView
	        android:id="@+id/tvTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_gravity="left|center_vertical"
	        android:text="Large Text"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	</FrameLayout>

    
	<LinearLayout
		android:id="@+id/layoutName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/name"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<EditText
			android:id="@+id/editTextName"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:ems="10"
			android:selectAllOnFocus="@bool/select_all">

			<requestFocus/>

		</EditText>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/layoutText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<EditText
			android:id="@+id/editTextText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:ems="10"
			android:inputType="textMultiLine"
			android:selectAllOnFocus="@bool/select_all"
			android:singleLine="false">

			<requestFocus/>

		</EditText>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/layoutMusic"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<CheckBox
			android:id="@+id/playMusic"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/play_music"
			android:layout_weight="0.25"/>

		<TextView
			android:id="@+id/textViewPathToMp3"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/path_music"
			android:layout_weight="0.25"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<Button
			android:id="@+id/btnSelectMusicPath"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="..."
			android:layout_weight="0.35"
			android:gravity="right"/>

		<Button
			android:id="@+id/buttonTestMusic"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:layout_weight="0.35"
			android:text="Test"/>

	</LinearLayout>

	<CheckBox
		android:id="@+id/music_quieter"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/music_quieter"/>

	<CheckBox
		android:id="@+id/countBeforeTheEnd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/count"/>

	<CheckBox
		android:id="@+id/speach_descr"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/speach_descr"/>

	<CheckBox
		android:id="@+id/expand_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/expand_text"/>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <Button
	        android:id="@+id/dialogeditButtonOk"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:drawableLeft="@drawable/ok"
	        android:selectAllOnFocus="@bool/select_all"
	        android:text="@string/ok" />

	    <Button
	        android:id="@+id/dialogeditButtonCancel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/cancel" />

	    <Button
	        android:id="@+id/dialogeditButtonLockUnlock"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/lock" />
	</LinearLayout>
		
</LinearLayout>

