<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="alex.mochalov.fitplayer.MainActivity" >

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/action_edit"/>
    <item
        android:id="@+id/action_add"
        android:orderInCategory="4"
        android:showAsAction="always"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="5"
        android:showAsAction="always"
        android:title="@string/action_delete"/>
    <item
        android:id="@+id/action_save"
        android:orderInCategory="6"
        android:showAsAction="always"
        android:title="@string/action_save"/>


</menu>
